# new-fda

./: .gitignore  docs.txt  pyproject.toml
src/new_fda/: __init__.py  ai_classify.py  annotations.py  args.py  batcher.py  cache.py  census.py  comorbid.py  demographics.py  encoding.py  fetchall.py  immunosuppress.py  important.csv  labval_queries.csv  meanings.csv  misspellings.txt  parse_hepC_sendout.py  parse_results.py  pregnancy.py  querydef.py  ses.py  sourcedb.py  stringsubs.py  todo.txt  uivars.csv  util.py
src/new_fda/comorbidities/: CMR-Reference-File_codes.csv  CMR-Reference-File_desc.csv
